Added different sampling methodologies.

--- a/datasetNotebooks/plantsvillage2.ipynb
+++ b/datasetNotebooks/plantsvillage2.ipynb
@@ -292,6 +292,141 @@
     "model = train_model(num_epochs=1000, patience=100)\n",
     "print(\"✅ Best model restored & ready!\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🔍 Class Distribution Analysis\n",
+    "\n",
+    "Let's check if our dataset has class imbalance issues."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data.utils import get_class_distribution, balance_dataset_uniform, calculate_class_weights, get_sample_weights\n",
+    "\n",
+    "# Check class distribution\n",
+    "train_dist = get_class_distribution(train)\n",
+    "print(f\"Class distribution in training set:\")\n",
+    "print(f\"  Min samples: {min(train_dist.values())}\")\n",
+    "print(f\"  Max samples: {max(train_dist.values())}\")\n",
+    "print(f\"  Mean samples: {sum(train_dist.values()) / len(train_dist):.1f}\")\n",
+    "print(f\"  Imbalance ratio: {max(train_dist.values()) / min(train_dist.values()):.2f}x\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ⚖️ Strategy 1: Uniform Sampling (Downsample to Smallest Class)\n",
+    "\n",
+    "This approach ensures equal representation by randomly downsampling larger classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Balance by uniform sampling\n",
+    "train_balanced = balance_dataset_uniform(train, seed=42)\n",
+    "\n",
+    "# Verify balance\n",
+    "balanced_dist = get_class_distribution(train_balanced)\n",
+    "print(f\"Balanced dataset size: {len(train_balanced)} (was {len(train)})\")\n",
+    "print(f\"Samples per class: {list(balanced_dist.values())[:5]}...\")  # Show first 5\n",
+    "print(f\"All classes equal: {len(set(balanced_dist.values())) == 1}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ⚖️ Strategy 2: Weighted Random Sampler (Oversample Small Classes)\n",
+    "\n",
+    "This approach uses PyTorch's WeightedRandomSampler to give rare classes higher sampling probability."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate per-sample weights\n",
+    "sample_weights = get_sample_weights(train)\n",
+    "\n",
+    "# Create DataLoader with weighted sampling\n",
+    "from torch.utils.data import DataLoader, WeightedRandomSampler\n",
+    "\n",
+    "train_dataset_weighted = MultiModalityDataset(train, get_transforms(IMAGE_SIZE, train=True))\n",
+    "\n",
+    "weighted_sampler = WeightedRandomSampler(\n",
+    "    weights=sample_weights,\n",
+    "    num_samples=len(sample_weights),\n",
+    "    replacement=True\n",
+    ")\n",
+    "\n",
+    "train_loader_weighted = DataLoader(\n",
+    "    train_dataset_weighted,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    sampler=weighted_sampler,  # Use sampler instead of shuffle\n",
+    "    num_workers=2\n",
+    ")\n",
+    "\n",
+    "print(f\"✅ Weighted sampler created!\")\n",
+    "print(f\"   Rare classes will be sampled more frequently during training.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ⚖️ Strategy 3: Weighted Loss Function\n",
+    "\n",
+    "Calculate class weights to use in CrossEntropyLoss for penalizing misclassification of rare classes more."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate class weights for loss function\n",
+    "class_weights = calculate_class_weights(train, num_classes=len(class_names))\n",
+    "\n",
+    "print(f\"Class weights shape: {class_weights.shape}\")\n",
+    "print(f\"Sample weights (first 5 classes): {class_weights[:5]}\")\n",
+    "\n",
+    "# Use in training\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "criterion_weighted = torch.nn.CrossEntropyLoss(weight=class_weights.to(device))\n",
+    "\n",
+    "print(f\"\\n✅ Use criterion_weighted in your training loop!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📊 Summary: Which Strategy to Use?\n",
+    "\n",
+    "| Strategy | Pros | Cons | Best For |\n",
+    "|----------|------|------|----------|\n",
+    "| **No balancing** | Simple, uses all data | May bias toward majority classes | Balanced datasets |\n",
+    "| **Uniform sampling** | Perfect balance, fast | Discards data from larger classes | Severe imbalance, plenty of data |\n",
+    "| **Weighted sampler** | Uses all data, no loss modification | May oversample minority too much | Training data only, moderate imbalance |\n",
+    "| **Weighted loss** | Uses all data, theoretically sound | Harder to tune | Works well with any imbalance level |\n",
+    "\n",
+    "**Recommendation**: Start with **weighted loss** as it's most flexible. Try **weighted sampler** if that doesn't help."
+   ]
   }
  ],
  "metadata": {
