--- a/datasetNotebooks/plantsvillage2.ipynb
+++ b/datasetNotebooks/plantsvillage2.ipynb
@@ -45,6 +45,7 @@
     "# Standard imports\n",
     "import os\n",
     "import sys\n",
+    "import yaml\n",
     "\n",
     "# Add parent directory to path to import data modules\n",
     "sys.path.insert(0, os.path.abspath('..'))\n",
@@ -58,14 +59,27 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "# ===========================\n",
-    "# Configuration\n",
+    "# Load Configuration from YAML\n",
     "# ===========================\n",
-    "DATA_DIR = \"/kaggle/input/plantvillage-dataset\"  # 👈 Change this to your dataset path\n",
-    "MODALITIES = [\"color\", \"grayscale\", \"segmented\"]\n",
-    "IMAGE_SIZE = 224  # Standard for pretrained models\n",
-    "BATCH_SIZE = 32\n",
+    "CONFIG_PATH = \"../configs/train.yaml\"\n",
     "\n",
-    "print(\"✅ Modules imported successfully!\")"
+    "with open(CONFIG_PATH, 'r') as f:\n",
+    "    config = yaml.safe_load(f)\n",
+    "\n",
+    "# Extract config values\n",
+    "DATA_DIR = config['data']['data_dir']\n",
+    "MODALITIES = config['data']['modalities']\n",
+    "IMAGE_SIZE = config['data']['image_size']\n",
+    "BATCH_SIZE = config['train']['batch_size']\n",
+    "NORMALIZE = config['data']['normalize']\n",
+    "AUGMENT = config['data']['augment']\n",
+    "\n",
+    "print(\"✅ Configuration loaded successfully!\")\n",
+    "print(f\"   Data directory: {DATA_DIR}\")\n",
+    "print(f\"   Image size: {IMAGE_SIZE}\")\n",
+    "print(f\"   Batch size: {BATCH_SIZE}\")\n",
+    "print(f\"   Normalize: {NORMALIZE}\")\n",
+    "print(f\"   Augment: {AUGMENT}\")"
    ]
   },
   {
@@ -95,9 +109,12 @@
    },
    "outputs": [],
    "source": [
-    "# 3️⃣ Train/Val/Test split\n",
-    "train, val, test = split_dataset(samples, test_size=0.15, val_size=0.18)\n",
-    "# Final: ~70% train / 15% val / 15% test\n",
+    "# 3️⃣ Train/Val/Test split (using config values)\n",
+    "train, val, test = split_dataset(\n",
+    "    samples, \n",
+    "    test_size=config['data']['test_size'], \n",
+    "    val_size=config['data']['val_size']\n",
+    ")\n",
     "\n",
     "print(f\"Train: {len(train)}, Val: {len(val)}, Test: {len(test)}\")"
    ]
@@ -110,16 +127,40 @@
    },
    "outputs": [],
    "source": [
-    "# 4️⃣ Build datasets\n",
-    "train_dataset = MultiModalityDataset(train, get_transforms(IMAGE_SIZE, train=True))\n",
-    "val_dataset   = MultiModalityDataset(val, get_transforms(IMAGE_SIZE, train=False))\n",
-    "test_dataset  = MultiModalityDataset(test, get_transforms(IMAGE_SIZE, train=False))\n",
+    "# 4️⃣ Build datasets (using config for transforms)\n",
+    "train_dataset = MultiModalityDataset(\n",
+    "    train, \n",
+    "    get_transforms(IMAGE_SIZE, train=True, normalize=NORMALIZE, augment=AUGMENT)\n",
+    ")\n",
+    "val_dataset = MultiModalityDataset(\n",
+    "    val, \n",
+    "    get_transforms(IMAGE_SIZE, train=False, normalize=NORMALIZE, augment=False)\n",
+    ")\n",
+    "test_dataset = MultiModalityDataset(\n",
+    "    test, \n",
+    "    get_transforms(IMAGE_SIZE, train=False, normalize=NORMALIZE, augment=False)\n",
+    ")\n",
     "\n",
     "\n",
     "# 5️⃣ DataLoaders\n",
-    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=2)\n",
-    "val_loader   = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=2)\n",
-    "test_loader  = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=2)\n",
+    "train_loader = DataLoader(\n",
+    "    train_dataset, \n",
+    "    batch_size=BATCH_SIZE, \n",
+    "    shuffle=True, \n",
+    "    num_workers=config['data']['num_workers']\n",
+    ")\n",
+    "val_loader = DataLoader(\n",
+    "    val_dataset, \n",
+    "    batch_size=BATCH_SIZE, \n",
+    "    shuffle=False, \n",
+    "    num_workers=config['data']['num_workers']\n",
+    ")\n",
+    "test_loader = DataLoader(\n",
+    "    test_dataset, \n",
+    "    batch_size=BATCH_SIZE, \n",
+    "    shuffle=False, \n",
+    "    num_workers=config['data']['num_workers']\n",
+    ")\n",
     "\n",
     "\n",
     "print(\"✅ DataLoaders are ready!\")"
@@ -135,15 +176,36 @@
    "source": [
     "# 6️⃣ Optional: Create subsets for quick testing/prototyping\n",
     "\n",
+    "# Use subset_fraction from config if specified\n",
+    "if config['data'].get('subset_fraction') and config['data']['subset_fraction'] < 1.0:\n",
+    "    train = make_subset(train, config['data']['subset_fraction'])\n",
+    "    print(f\"Using {config['data']['subset_fraction']*100:.0f}% subset: {len(train)} samples\")\n",
+    "\n",
     "# Small subset for quick testing\n",
     "train_tiny = make_subset(train, 0.05)\n",
-    "train_tiny_dataset = MultiModalityDataset(train_tiny, get_transforms(IMAGE_SIZE, train=True))\n",
-    "train_tiny_loader = DataLoader(train_tiny_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=2)\n",
+    "train_tiny_dataset = MultiModalityDataset(\n",
+    "    train_tiny, \n",
+    "    get_transforms(IMAGE_SIZE, train=True, normalize=NORMALIZE, augment=AUGMENT)\n",
+    ")\n",
+    "train_tiny_loader = DataLoader(\n",
+    "    train_tiny_dataset, \n",
+    "    batch_size=BATCH_SIZE, \n",
+    "    shuffle=True, \n",
+    "    num_workers=config['data']['num_workers']\n",
+    ")\n",
     "\n",
     "# Medium subset for hyperparameter tuning\n",
     "train_medium = make_subset(train, 0.3)\n",
-    "train_medium_dataset = MultiModalityDataset(train_medium, get_transforms(IMAGE_SIZE, train=True))\n",
-    "train_medium_loader = DataLoader(train_medium_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=2)\n",
+    "train_medium_dataset = MultiModalityDataset(\n",
+    "    train_medium, \n",
+    "    get_transforms(IMAGE_SIZE, train=True, normalize=NORMALIZE, augment=AUGMENT)\n",
+    ")\n",
+    "train_medium_loader = DataLoader(\n",
+    "    train_medium_dataset, \n",
+    "    batch_size=BATCH_SIZE, \n",
+    "    shuffle=True, \n",
+    "    num_workers=config['data']['num_workers']\n",
+    ")\n",
     "\n",
     "print(f\"Tiny subset: {len(train_tiny)} samples\")\n",
     "print(f\"Medium subset: {len(train_medium)} samples\")"
