Added visualisation utilities.

--- a/datasetNotebooks/plantsvillage2.ipynb
+++ b/datasetNotebooks/plantsvillage2.ipynb
@@ -102,6 +102,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📊 Visualize Dataset Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data.visualization import (\n",
+    "    plot_class_distribution, \n",
+    "    plot_modality_distribution,\n",
+    "    visualize_sample_images\n",
+    ")\n",
+    "\n",
+    "# Plot overall class distribution\n",
+    "plot_class_distribution(samples, class_names, title=\"Overall Class Distribution\")\n",
+    "\n",
+    "# Plot modality distribution\n",
+    "plot_modality_distribution(samples, MODALITIES)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🖼️ Visualize Sample Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show sample images from first 5 classes\n",
+    "visualize_sample_images(samples, class_names, num_classes_to_show=5, samples_per_class=3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -117,6 +160,25 @@
     ")\n",
     "\n",
     "print(f\"Train: {len(train)}, Val: {len(val)}, Test: {len(test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📈 Visualize Train/Val/Test Splits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data.visualization import plot_split_distribution\n",
+    "\n",
+    "# Visualize class distribution across splits\n",
+    "plot_split_distribution(train, val, test, class_names)"
    ]
   },
   {
@@ -164,6 +226,55 @@
     "\n",
     "\n",
     "print(\"✅ DataLoaders are ready!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 👀 Visualize DataLoader Batches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data.visualization import show_batch\n",
+    "\n",
+    "# Visualize a batch from training data\n",
+    "print(\"Training batch:\")\n",
+    "show_batch(train_loader, class_names, num_images=8, denorm=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🔄 Compare Augmentations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data.visualization import compare_augmentations\n",
+    "\n",
+    "# Create datasets with and without augmentation for comparison\n",
+    "train_no_aug = MultiModalityDataset(\n",
+    "    train[:100], \n",
+    "    get_transforms(IMAGE_SIZE, train=False, normalize=NORMALIZE, augment=False)\n",
+    ")\n",
+    "train_with_aug = MultiModalityDataset(\n",
+    "    train[:100], \n",
+    "    get_transforms(IMAGE_SIZE, train=True, normalize=NORMALIZE, augment=True)\n",
+    ")\n",
+    "\n",
+    "# Compare augmentation effects\n",
+    "compare_augmentations(train_no_aug, train_with_aug, class_names, idx=0)"
    ]
   },
   {
