Added data equalization strategies.

--- a/datasetNotebooks/plantsvillage2.ipynb
+++ b/datasetNotebooks/plantsvillage2.ipynb
@@ -1,35 +1,70 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "execution": {
-     "iopub.execute_input": "2025-11-06T09:03:58.857570Z",
-     "iopub.status.busy": "2025-11-06T09:03:58.857195Z",
-     "iopub.status.idle": "2025-11-06T09:04:00.640522Z",
-     "shell.execute_reply": "2025-11-06T09:04:00.639702Z",
-     "shell.execute_reply.started": "2025-11-06T09:03:58.857544Z"
-    },
-    "trusted": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Plant Disease Classification - Data Pipeline\n",
     "\n",
-    "This notebook demonstrates the use of refactored data modules for the PlantVillage dataset.\n",
+    "This notebook demonstrates the refactored data modules for the PlantVillage dataset.\n",
     "\n",
-    "**Modules:**\n",
-    "- `data.dataset`: Custom PyTorch Dataset and DataLoader creation\n",
-    "- `data.transforms`: Image augmentation and normalization\n",
-    "- `data.utils`: Dataset splitting and subset creation utilities"
+    "## 📦 Installation\n",
+    "\n",
+    "Run the cells below to install required packages."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: The script isympy.exe is installed in 'C:\\Users\\ACER\\AppData\\Roaming\\Python\\Python313\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "  WARNING: The scripts torchfrtrace.exe and torchrun.exe are installed in 'C:\\Users\\ACER\\AppData\\Roaming\\Python\\Python313\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Packages installed successfully!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.1.1 -> 25.3\n",
+      "[notice] To update, run: C:\\Python313\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install PyTorch and related packages\n",
+    "!pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu -q\n",
+    "!pip install scikit-learn matplotlib pillow pyyaml -q\n",
+    "\n",
+    "print(\"✅ Packages installed successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🔧 Import Modules\n",
+    "\n",
+    "Import all required libraries and load configuration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-10-28T15:19:42.019190Z",
@@ -40,7 +75,23 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[WinError 1114] A dynamic link library (DLL) initialization routine failed. Error loading \"C:\\Users\\ACER\\AppData\\Roaming\\Python\\Python310\\site-packages\\torch\\lib\\c10.dll\" or one of its dependencies.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;241m0\u001b[39m, os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mabspath(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Import our custom data modules\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdataset\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MultiModalityDataset, create_dataloaders\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtransforms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_transforms\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m build_class_mapping, gather_samples, split_dataset, make_subset\n",
+      "File \u001b[1;32mc:\\Users\\ACER\\Desktop\\Game\\AI_Group\\PlantDiseaseClassifier\\data\\__init__.py:5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124;03mData module for PlantVillage dataset handling.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdataset\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MultiModalityDataset, create_dataloaders\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtransforms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_transforms\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m      8\u001b[0m     build_class_mapping,\n\u001b[0;32m      9\u001b[0m     gather_samples,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m     get_sample_weights\n\u001b[0;32m     16\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\ACER\\Desktop\\Game\\AI_Group\\PlantDiseaseClassifier\\data\\dataset.py:5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124;03mPyTorch Dataset class for multi-modality plant disease classification.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dataset, DataLoader, WeightedRandomSampler\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\torch\\__init__.py:281\u001b[0m\n\u001b[0;32m    277\u001b[0m                     \u001b[38;5;28;01mraise\u001b[39;00m err\n\u001b[0;32m    279\u001b[0m         kernel32\u001b[38;5;241m.\u001b[39mSetErrorMode(prev_error_mode)\n\u001b[1;32m--> 281\u001b[0m     \u001b[43m_load_dll_libraries\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    282\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m _load_dll_libraries\n\u001b[0;32m    285\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_get_cuda_dep_paths\u001b[39m(path: \u001b[38;5;28mstr\u001b[39m, lib_folder: \u001b[38;5;28mstr\u001b[39m, lib_name: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m]:\n\u001b[0;32m    286\u001b[0m     \u001b[38;5;66;03m# Libraries can either be in\u001b[39;00m\n\u001b[0;32m    287\u001b[0m     \u001b[38;5;66;03m# path/nvidia/lib_folder/lib or\u001b[39;00m\n\u001b[0;32m    288\u001b[0m     \u001b[38;5;66;03m# path/nvidia/cuXX/lib (since CUDA 13.0) or\u001b[39;00m\n\u001b[0;32m    289\u001b[0m     \u001b[38;5;66;03m# path/lib_folder/lib\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\torch\\__init__.py:264\u001b[0m, in \u001b[0;36m_load_dll_libraries\u001b[1;34m()\u001b[0m\n\u001b[0;32m    260\u001b[0m     err \u001b[38;5;241m=\u001b[39m ctypes\u001b[38;5;241m.\u001b[39mWinError(last_error)\n\u001b[0;32m    261\u001b[0m     err\u001b[38;5;241m.\u001b[39mstrerror \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    262\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m Error loading \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdll\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m or one of its dependencies.\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    263\u001b[0m     )\n\u001b[1;32m--> 264\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m err\n\u001b[0;32m    265\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m res \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    266\u001b[0m     is_loaded \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[1;31mOSError\u001b[0m: [WinError 1114] A dynamic link library (DLL) initialization routine failed. Error loading \"C:\\Users\\ACER\\AppData\\Roaming\\Python\\Python310\\site-packages\\torch\\lib\\c10.dll\" or one of its dependencies."
+     ]
+    }
+   ],
    "source": [
     "# Standard imports\n",
     "import os\n",
@@ -600,6 +651,163 @@
     "\n",
     "**Recommendation**: Start with **weighted loss** as it's most flexible. Try **weighted sampler** if that doesn't help."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🚀 Automated Strategy Application (Simplified API)\n",
+    "\n",
+    "Instead of manually implementing each strategy, use the automated `apply_imbalance_strategy` function!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data.strategies import apply_imbalance_strategy\n",
+    "\n",
+    "# Example 1: No balancing (default)\n",
+    "train_loader_none, loss_weights_none, info_none = apply_imbalance_strategy(\n",
+    "    samples=train,\n",
+    "    transforms=get_transforms(IMAGE_SIZE, train=True, normalize=NORMALIZE, augment=AUGMENT),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    num_classes=len(class_names),\n",
+    "    strategy_name='none',\n",
+    "    num_workers=2\n",
+    ")\n",
+    "\n",
+    "print(\"Strategy: None\")\n",
+    "print(f\"  Samples: {info_none['final_samples']}\")\n",
+    "print(f\"  Loss weights: {info_none['using_weighted_loss']}\")\n",
+    "print(f\"  Weighted sampler: {info_none['using_weighted_sampler']}\")\n",
+    "print()\n",
+    "\n",
+    "# Example 2: Uniform sampling (downsample)\n",
+    "train_loader_uniform, loss_weights_uniform, info_uniform = apply_imbalance_strategy(\n",
+    "    samples=train,\n",
+    "    transforms=get_transforms(IMAGE_SIZE, train=True, normalize=NORMALIZE, augment=AUGMENT),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    num_classes=len(class_names),\n",
+    "    strategy_name='uniform',\n",
+    "    strategy_config={'seed': 42},\n",
+    "    num_workers=2\n",
+    ")\n",
+    "\n",
+    "print(\"Strategy: Uniform\")\n",
+    "print(f\"  Samples: {info_uniform['final_samples']} (removed {info_uniform['samples_removed']})\")\n",
+    "print(f\"  Loss weights: {info_uniform['using_weighted_loss']}\")\n",
+    "print(f\"  Weighted sampler: {info_uniform['using_weighted_sampler']}\")\n",
+    "print()\n",
+    "\n",
+    "# Example 3: Weighted sampler (oversample)\n",
+    "train_loader_sampler, loss_weights_sampler, info_sampler = apply_imbalance_strategy(\n",
+    "    samples=train,\n",
+    "    transforms=get_transforms(IMAGE_SIZE, train=True, normalize=NORMALIZE, augment=AUGMENT),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    num_classes=len(class_names),\n",
+    "    strategy_name='weighted_sampler',\n",
+    "    strategy_config={'replacement': True},\n",
+    "    num_workers=2\n",
+    ")\n",
+    "\n",
+    "print(\"Strategy: Weighted Sampler\")\n",
+    "print(f\"  Samples: {info_sampler['final_samples']}\")\n",
+    "print(f\"  Loss weights: {info_sampler['using_weighted_loss']}\")\n",
+    "print(f\"  Weighted sampler: {info_sampler['using_weighted_sampler']}\")\n",
+    "print()\n",
+    "\n",
+    "# Example 4: Weighted loss\n",
+    "train_loader_loss, loss_weights_loss, info_loss = apply_imbalance_strategy(\n",
+    "    samples=train,\n",
+    "    transforms=get_transforms(IMAGE_SIZE, train=True, normalize=NORMALIZE, augment=AUGMENT),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    num_classes=len(class_names),\n",
+    "    strategy_name='weighted_loss',\n",
+    "    strategy_config={'weight_power': 1.0},\n",
+    "    num_workers=2\n",
+    ")\n",
+    "\n",
+    "print(\"Strategy: Weighted Loss\")\n",
+    "print(f\"  Samples: {info_loss['final_samples']}\")\n",
+    "print(f\"  Loss weights: {info_loss['using_weighted_loss']}\")\n",
+    "print(f\"  Loss weight values (first 5): {loss_weights_loss[:5] if loss_weights_loss is not None else None}\")\n",
+    "print(f\"  Weighted sampler: {info_loss['using_weighted_sampler']}\")\n",
+    "print()\n",
+    "\n",
+    "# Example 5: Hybrid (combine strategies)\n",
+    "train_loader_hybrid, loss_weights_hybrid, info_hybrid = apply_imbalance_strategy(\n",
+    "    samples=train,\n",
+    "    transforms=get_transforms(IMAGE_SIZE, train=True, normalize=NORMALIZE, augment=AUGMENT),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    num_classes=len(class_names),\n",
+    "    strategy_name='hybrid',\n",
+    "    strategy_config={\n",
+    "        'sampling_strategy': 'uniform',  # or 'weighted' or 'none'\n",
+    "        'use_weighted_loss': True,\n",
+    "        'weight_power': 0.5  # Softer weighting\n",
+    "    },\n",
+    "    num_workers=2\n",
+    ")\n",
+    "\n",
+    "print(\"Strategy: Hybrid\")\n",
+    "print(f\"  Samples: {info_hybrid['final_samples']} (removed {info_hybrid['samples_removed']})\")\n",
+    "print(f\"  Loss weights: {info_hybrid['using_weighted_loss']}\")\n",
+    "print(f\"  Weighted sampler: {info_hybrid['using_weighted_sampler']}\")\n",
+    "print()\n",
+    "\n",
+    "print(\"✅ All strategies created successfully!\")\n",
+    "print(\"\\nTo use in training:\")\n",
+    "print(\"  - Use train_loader_* for your training loop\")\n",
+    "print(\"  - Use loss_weights_* in your loss function:\")\n",
+    "print(\"    criterion = nn.CrossEntropyLoss(weight=loss_weights_loss.to(device))\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🎯 Config-Driven Strategy Usage\n",
+    "\n",
+    "Even simpler: load strategy settings from your YAML config!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Just specify strategy in config and let the code handle everything!\n",
+    "strategy_name = config['data'].get('balance_strategy', None)\n",
+    "strategy_config = config['data'].get('balance_config', {})\n",
+    "\n",
+    "# Apply strategy from config\n",
+    "train_loader_auto, loss_weights_auto, info_auto = apply_imbalance_strategy(\n",
+    "    samples=train,\n",
+    "    transforms=get_transforms(IMAGE_SIZE, train=True, normalize=NORMALIZE, augment=AUGMENT),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    num_classes=len(class_names),\n",
+    "    strategy_name=strategy_name,\n",
+    "    strategy_config=strategy_config,\n",
+    "    num_workers=config['data']['num_workers']\n",
+    ")\n",
+    "\n",
+    "print(f\"✅ Strategy from config: {info_auto['strategy']}\")\n",
+    "print(f\"   Final samples: {info_auto['final_samples']}\")\n",
+    "print(f\"   Using weighted loss: {info_auto['using_weighted_loss']}\")\n",
+    "print(f\"   Using weighted sampler: {info_auto['using_weighted_sampler']}\")\n",
+    "\n",
+    "# Use in training\n",
+    "if loss_weights_auto is not None:\n",
+    "    print(f\"\\n💡 Use this in your training:\")\n",
+    "    print(f\"   criterion = nn.CrossEntropyLoss(weight=loss_weights_auto.to(device))\")\n",
+    "else:\n",
+    "    print(f\"\\n💡 Use standard loss function:\")\n",
+    "    print(f\"   criterion = nn.CrossEntropyLoss()\")"
+   ]
   }
  ],
  "metadata": {
@@ -633,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
