Removed strategies. Changed detection functionality to allow for multiple zip files in a dataset

--- a/datasetNotebooks/DemonstrateDatasetUsage.ipynb
+++ b/datasetNotebooks/DemonstrateDatasetUsage.ipynb
@@ -2,15 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "6595b6bf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Modules imported successfully.\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'data.strategies'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Add parent directory to path to import our local modules\u001b[39;00m\n\u001b[32m     10\u001b[39m sys.path.insert(\u001b[32m0\u001b[39m, os.path.abspath(\u001b[33m'\u001b[39m\u001b[33m..\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdata\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdataset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MultiModalityDataset\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdata\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtransforms\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_transforms\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdata\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m build_class_mapping, gather_samples, split_dataset, ensure_dataset_extracted\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\ACER\\Desktop\\Game\\AI_Group\\PlantDiseaseClassifier\\data\\__init__.py:25\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m      8\u001b[39m     build_class_mapping,\n\u001b[32m      9\u001b[39m     gather_samples,\n\u001b[32m   (...)\u001b[39m\u001b[32m     15\u001b[39m     get_sample_weights\n\u001b[32m     16\u001b[39m )\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvisualization\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     18\u001b[39m     show_batch,\n\u001b[32m     19\u001b[39m     plot_class_distribution,\n\u001b[32m   (...)\u001b[39m\u001b[32m     23\u001b[39m     visualize_sample_images\n\u001b[32m     24\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstrategies\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     26\u001b[39m     get_strategy,\n\u001b[32m     27\u001b[39m     apply_imbalance_strategy,\n\u001b[32m     28\u001b[39m     NoBalancingStrategy,\n\u001b[32m     29\u001b[39m     UniformSamplingStrategy,\n\u001b[32m     30\u001b[39m     WeightedSamplerStrategy,\n\u001b[32m     31\u001b[39m     WeightedLossStrategy,\n\u001b[32m     32\u001b[39m     HybridStrategy\n\u001b[32m     33\u001b[39m )\n\u001b[32m     35\u001b[39m __all__ = [\n\u001b[32m     36\u001b[39m     \u001b[38;5;66;03m# Dataset & DataLoaders\u001b[39;00m\n\u001b[32m     37\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mMultiModalityDataset\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     61\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mvisualize_sample_images\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     62\u001b[39m ]\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'data.strategies'"
      ]
     }
    ],
@@ -45,21 +50,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "id": "be8a1c2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⬇️ Initializing ClearML Dataset: tiny (e1277db0a8a445d9b6faa1f3947c1fe0)...\n",
-      "✅ Dataset available at: C:/Users/ACER/.clearml/cache/storage_manager/datasets/ds_e1277db0a8a445d9b6faa1f3947c1fe0\\plantvillage_tiny\n",
-      "✅ Dataset available at: C:/Users/ACER/.clearml/cache/storage_manager/datasets/ds_e1277db0a8a445d9b6faa1f3947c1fe0\\plantvillage_tiny\n"
-     ]
-    }
-   ],
    "source": [
     "# Dataset IDs from ClearML\n",
     "DATASET_IDS = {\n",
@@ -71,7 +64,7 @@
     "# -----------------------------------------\n",
     "# SELECT DATASET HERE\n",
     "# -----------------------------------------\n",
-    "SELECTED_DATASET = \"tiny\"  # Options: 'tiny', 'medium', 'large'\n",
+    "SELECTED_DATASET = \"medium\"  # Options: 'tiny', 'medium', 'large'\n",
     "# -----------------------------------------\n",
     "\n",
     "dataset_id = DATASET_IDS[SELECTED_DATASET]\n",
@@ -97,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "15de0def",
    "metadata": {},
    "outputs": [
@@ -158,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0ecb427e",
    "metadata": {},
    "outputs": [
